--- a/src/components/ComponentsStyles.css
+++ b/src/components/ComponentsStyles.css
@@ -1,13 +1,12 @@
 body{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: normal;
+  background-color: #103047;;
+  color: #fff;
 }
 
-.UI-Section-content{
-  background-color: #103047;
-  color: white;
-  height: 100vh;
-  padding: 15px;
+p{
+  margin: 8px 0px;
 }
 
 /* Start Button Styles */
@@ -34,3 +33,60 @@ body{
 
 /* End Button Styles */
 
+/* Start Design Guide Colors Styles */
+
+  .Tile-style{
+    float: left;
+    margin: 15px;
+  }
+
+  .div-section{
+    position: relative;
+    display: flow-root;
+  }
+
+  .baseclr1{
+    background:#0A273B;
+  }
+  .baseclr2{
+    background:#CACACA;
+  }
+  .baseclr3{
+    background:#EBEBEB;
+  }
+  .baseclr4{
+    background:#FFFFFF;
+  }
+  
+  .primaryclr1{
+    background:#F24E54;
+  }
+  .primaryclr2{
+    background:#FF9D00;
+  }
+  .primaryclr3{
+    background:#0080FF;
+  }
+
+  .Indicationclr1{
+    background:#008000;
+  }
+  .Indicationclr2{
+    background:#FF0000;
+  }
+  .Indicationclr3{
+    background:#FF00FF;
+  }
+  .Indicationclr4{
+    background:#00B0F0;
+  }
+  .Indicationclr5{
+    background:#FD9A44;
+  }
+  .Indicationclr6{
+    background:#A5A7A5;
+  }
+  .Indicationclr7{
+    background:#FDEAB7;
+  }
+/* End Design Guide Colors Styles */
