--- a/src/components/ComponentsStyles.css
+++ b/src/components/ComponentsStyles.css
@@ -31,6 +31,163 @@ body{
     font-size: 18px;
     padding: .8em 1.5em;
   }
-
-/* End Button Styles */
-
+  .modal {
+   
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+  }
+  .Closemodal{
+    position: absolute;
+    right: 20px;
+    top: 0;
+    font-size: 19px;
+  }
+  /** popover **/
+  .box {
+    width: 150px;
+    height: 75px;
+    background-color: white;
+    color: #000000;
+    padding: 20px;
+    position: fixed;
+    margin: 25px;
+    float: left;
+  }
+  .bottom{
+    margin-left: 202px;
+    margin-top: -4px;
+  }
+  .right{
+    margin-left: 374px;
+    margin-top: 88px;
+  }
+  .left{
+    right: 154px;
+    margin-top: 99px;
+  }
+  
+  .box.arrow-top {
+    margin-top: 180px;
+  }
+  
+  .box.arrow-top:after {
+    content: " ";
+    position: absolute;
+    right: 83px;
+    top: -15px;
+    border-top: none;
+    border-right: 15px solid transparent;
+    border-left: 15px solid transparent;
+    border-bottom: 15px solid white;
+  }
+  
+  .box.arrow-right:after {
+    content: " ";
+    position: absolute;
+    right: -15px;
+    top: 40px;
+    border-top: 15px solid transparent;
+    border-right: none;
+    border-left: 15px solid white;
+    border-bottom: 15px solid transparent;
+  }
+  
+  .box.arrow-bottom:after {
+    content: " ";
+    position: absolute;
+    right: 78px;
+    bottom: -15px;
+    border-top: 15px solid white;
+    border-right: 15px solid transparent;
+    border-left: 15px solid transparent;
+    border-bottom: none;
+  }
+  
+  .box.arrow-left:after {
+    content: " ";
+    position: absolute;
+    left: -15px;
+    top: 35px;
+    border-top: 15px solid transparent;
+    border-right: 15px solid white;
+    border-left: none;
+    border-bottom: 15px solid transparent;
+  }
+  /*end of popover*/
+  /*starting Tooltip*/
+  .boxtool {
+    width: 150px;
+    height: 25px;
+    background-color: white;
+    color: #000000;
+    padding: 20px;
+    position: fixed;
+    margin: 25px;
+    float: left;
+  }
+  .bottomtool{
+    margin-left: 202px;
+    margin-top: 47px;
+  }
+  .righttool{
+    margin-left: 374px;
+    margin-top: 107px;
+  }
+  .lefttool{
+    right: 154px;
+    margin-top: 107px;
+  }
+  .boxtool.arrow-top {
+    margin-top: 180px;
+  }
+  
+  .boxtool.arrow-top:after {
+    content: " ";
+    position: absolute;
+    right: 83px;
+    top: -15px;
+    border-top: none;
+    border-right: 15px solid transparent;
+    border-left: 15px solid transparent;
+    border-bottom: 15px solid white;
+  }
+  
+  .boxtool.arrow-right:after {
+    content: " ";
+    position: absolute;
+    right: -15px;
+    top: 23px;
+    border-top: 15px solid transparent;
+    border-right: none;
+    border-left: 15px solid white;
+    border-bottom: 15px solid transparent;
+  }
+  
+  .boxtool.arrow-bottom:after {
+    content: " ";
+    position: absolute;
+    right: 78px;
+    bottom: -15px;
+    border-top: 15px solid white;
+    border-right: 15px solid transparent;
+    border-left: 15px solid transparent;
+    border-bottom: none;
+  }
+  
+  .boxtool.arrow-left:after {
+    content: " ";
+    position: absolute;
+    left: -15px;
+    top: 23px;
+    border-top: 15px solid transparent;
+    border-right: 15px solid white;
+    border-left: none;
+    border-bottom: 15px solid transparent;
+  }
